:fix: correction de l'erreur console quand on cherche une erreur 404 à partir d'une page logement + :style: animation du chevron collapse + footer mobile sur 2 lignes

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -38,6 +38,7 @@ footer {
         }
 
         p {
+            width: 120px;
             font-size: 12px;
         }
     }
